apps/site/assets/css/_footer.scss
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
//
// GENERAL FOOTER STYLES
//
//

.m-footer {
  background-color: $footer-color;
  color: $white;
  min-width: 20rem;
  padding-bottom: 24px;
  padding-top: 24px;
  border-radius:  0 50px 0 0;
  flex-basis: 70%;

  @include media-breakpoint-up(xxl) {
    font-size: $font-size-base;
  }

  @include media-breakpoint-up(lg) {
    height: 100%;
    padding-left: 1rem;
    padding-right: 1rem;
    position: relative;
    p {
      margin-left: 40px;
    }
  }

  @include media-breakpoint-down(md) {
    font-size: $font-size-base-sm;
  }

  .container {
    padding-bottom: 44px;
  }
}

.m-footer__links {
  display: grid;
  gap: 1.75rem;
  grid-template-columns: 1fr 1fr 1fr;

  @include media-breakpoint-down(xs) {
    display: block;

  }

  a {
    color: $brand-primary-light-contrast;
    display: block;
    margin: .75rem 0;
    @include media-breakpoint-up(lg) {
      font-size: 18px;
      margin-bottom: 1rem;
    }

    @include media-breakpoint-down(xs) {
      margin: 20px 0;
    }

    &:hover {
      color: $brand-primary-light;
      text-decoration: underline;
    }

    &:active {
      color: $brand-primary;
      text-decoration: underline;
    }

    &:focus {
      outline: 2px solid $brand-secondary;
    }
  }
}

.m-footer__group {
  margin-bottom: 1.75rem;
}

.m-footer__group-title {
  @include h3();
  margin: 0 0 1.15em;

  @include media-breakpoint-only(xs) {
    font-size: 12px;
    margin: 0 0 24px;
  }

  @include media-breakpoint-only(sm) {
    font-size: 1.15rem;
  }

  @include media-breakpoint-up(lg) {
    font-size: 24px;
    line-height: 30px;
    font-family: Inter UI,Helvetica Neue,Helvetica,Arial,sans-serif;
    margin-bottom: 4px;
    margin-top: 16px;
  }
}

.m-footer__copyright {
  font-size: $font-size-base-xs;
  @include media-breakpoint-up(lg) {
    position: absolute;
    margin: 0 40px 0 40px;
    left: 0;
    right: 0;
    bottom: 34px;
  }
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
//
// MOBILE FOOTER STYLES
//

@include media-breakpoint-up(lg) {
  .m-footer__group {
    padding-left: 40px;
  }
}

address {
  .m-footer__item {
    a {
      color: $brand-primary;
    }

    @include media-breakpoint-down(xs) {
      font-size: 14px;
      line-height: 21px;
    }
  }
}

.call-us-container {
  margin-bottom: -50px;
  background: $brand-primary-lightest-contrast;
  padding-bottom: 0;
  padding-top: 22px;
  flex-basis: 30%;
  border-radius: 50px 0 0 0;

  .m-menu__feature {
    background: $brand-primary-lightest-contrast;
    font-size: 1rem;
    margin-bottom: 14px;

    @include media-breakpoint-down(sm) {
      padding-top: 16px;
      padding-bottom: 14px;
      a {
        margin-top: 20px;
      }
    }

    @include media-breakpoint-up(lg) {
      padding-bottom: 26px;
    }

  small {
    font-size: 16px;
    @include media-breakpoint-down(xs) {
      white-space: nowrap;
    }
  }
  
  }

  @include media-breakpoint-up(lg) {
    font-size: $font-size-base;
    padding-left: 120px;
  }

  @include media-breakpoint-only(md) {
    font-size: $font-size-base-sm;
    padding-bottom: $base-spacing * 2;
  }

  @include media-breakpoint-down(sm) {
    padding-bottom: 50px;
  }
  .m-footer__links {
    @include media-breakpoint-down(xs){
      display: block;
    }
    @include media-breakpoint-up(lg){
      display: block;
    }
  }
  @include media-breakpoint-up(lg) {
    margin-bottom: 0px;
    padding-right: 40px;
    .container {
      ul {
        display: flex;
        flex-direction: column;
        .m-footer__group {
          width: 100%;
        }
      }
    }

    .m-footer__group {
      padding-left: 15px;
    }
  }

  :nth-child(2) {
    :nth-child(1) {
      margin-top: 0;
    }
  }

  .m-menu__feature_phone {
    padding-top: 1rem;
    @include media-breakpoint-down(xs) {
      display: flex;
      a {
        padding-top: 0px;
        margin-top: 0px;
      }
      strong {
        padding-right: 4px;
      }
    }
  }
}

.call-us-header {
  @include media-breakpoint-up(lg) {
    padding-left: 15px;
    font-size:23px;
    margin-bottom: 24px;
    font-family: Inter UI,Helvetica Neue,Helvetica,Arial,sans-serif;
  }
  @include media-breakpoint-down(sm) {
    padding-left: 15px;
  }
}

.numbers-container {
  padding-top: 19px;
  @include media-breakpoint-up(sm) {
    .m-footer__item {
      display: flex;
    }
    strong {
      margin-top: 12px;
      padding-right: 4px;
    }
  }
}

.all-container {
  @include media-breakpoint-up(lg) {
    display: flex;
    height: 100%;
  }
}

.lower-footer {
  @include media-breakpoint-down(xs) {
    flex-direction: column;
  }

  @include media-breakpoint-up(lg) {
    position: absolute;
    margin: 0 40px 0 40px;
    left: 0;
    right: 0;
    bottom: 60px;
  }

  display: flex;
  justify-content: space-between;
  border-top: 2px solid $brand-primary-light-contrast;
  padding-top: 20px;
  padding-bottom: 20px;
  bottom: 90px;

  .m-menu__language {
    color: $brand-primary-light-contrast;
    .custom-language-selector {
      color: $brand-primary-light-contrast;
    }
    
    .header-globe {
      display: none;
    }
    .footer-globe {
      display: block;
    }
  }
  
}

.social-icons-container {
  @include media-breakpoint-down(xs) {
    padding-top: 20px;
  }
}

.social-icons-container a:first-of-type {
  :first-child {
    padding-left: 0px;
  }
}

.social-icon {
  padding-left: 20px;
  color: $brand-primary-light-contrast;
  &:hover {
    color: $brand-primary-light;
  }
  &:active {
    color: $brand-primary;
  }
  &:focus {
    color: $brand-primary-light;
    outline: $brand-secondary solid 2px;
  }
}

